Fixed align-items for header, testimonials, footer

--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ footer {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  align-content: center;
+  align-items: center;
   width: 100%;
   padding-bottom: 50px;
 }
@@ -89,7 +89,7 @@ footer {
   /* Add a Flexbox property to make the services-content-wrapper a flex parent container. */
   display: flex;
   /* Add a justify-content property and value so that any extra space in the parent container is between the child flex items as the layout changes and more than one card is on a row.  */
-  justify-content: center;
+  justify-content: space-between;
   /* Add the Flexbox property flex-flow: row wrap; to allow the flex child items to wrap. */
   flex-flow: row wrap;
 }
@@ -117,7 +117,7 @@ footer {
 
 .testimonial-content-wrapper {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-flow: row wrap;
     /* Add align-items: flex-start; so that the background adjusts to the height of the testimonial. */
   align-items: flex-start;
